Sun Dec 23 19:45:22 2007  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.httpdate): fix 2 digits year for 20xx.
	  reported by Tadayoshi Funaba.  [ruby-dev:32687]

Sun Dec 23 19:33:42 2007  Eric Hodel  <drbrain@segment7.net>

	* lib/open-uri.rb:  Fix method redefined warning.  [ruby-core:14304]

Sun Dec 23 18:31:49 2007  NARUSE, Yui <naruse@ruby-lang.org>

	* ext/nkf/nkf.c (rb_nkf_enc_get): use rb_define_dummy_encoding.

	* ext/nkf/nkf.c (Init_nkf): use rb_nkf_enc_get("ASCII").

	* ext/nkf/nkf-utf8/nkf.c: Update 1.161.

	* ext/nkf/nkf-utf9/config.h: default output encoding is now UTF-8.

	* ext/nkf/lib/kconv.rb (Kconv.kconv): replace Encoding#name by
	  Encoding#to_s.

Sun Dec 23 18:02:52 2007  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/gem_open_uri.rb:  Fix version check.

Sun Dec 23 17:24:48 2007  Tanaka Akira  <akr@fsij.org>

	* encoding.c (rb_enc_init): add eucJP as an alias of EUC-JP.

Sun Dec 23 17:00:23 2007  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.httpdate): use Time.utc for
	  "day-of-week, dd-mon-yy HH::MM:SS GMT" format.

Sun Dec 23 16:12:40 2007  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Fix 1.9 warnings.

Sun Dec 23 15:28:37 2007  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems, test/rubygems:  Fix new 1.9 warnings.

Sun Dec 23 14:43:10 2007  Eric Hodel  <drbrain@segment7.net>

	* gem_prelude.rb:  Use require to load rubygems.rb so the correct path
	is in $LOADED_FEATURES on RubyGems upgrade.

Sun Dec 23 11:26:43 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (sym_call): use exact argument array interface.
	  [ruby-core:14279]

Sun Dec 23 11:01:35 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_binmode_m): removed C99ism.

Sun Dec 23 10:23:23 2007  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* transcode_data_one_byte.c: Better (and more honest) optimization.

	* transcode_data_japanese.c: First optimization step.

Sun Dec 23 09:07:02 2007  Tanaka Akira  <akr@fsij.org>
