@@ -1,3 +1,11 @@
+Sun Dec 23 23:03:13 2007  Tanaka Akira  <akr@fsij.org>
+
+	* encoding.c (rb_enc_codepoint): implemented to raise invalid
+	  encoding.
+
+	* include/ruby/encoding.h (rb_enc_codepoint): macro is replaced as a
+	  declaration.
+
 Sun Dec 23 19:45:22 2007  Tanaka Akira  <akr@fsij.org>
 
 	* lib/time.rb (Time.httpdate): fix 2 digits year for 20xx.
